--- a/users/templates/operator.html
+++ b/users/templates/operator.html
@@ -38,6 +38,15 @@
                                             </div>
                                             
                                         </div>
+                                        <div class="form-group text-left">
+                                            <input name='permission' value='client' type="radio" required />
+                                            <label for="demo-remember-me-2">Client</label>
+                                        </div>
+
+                                        <div class="form-group text-left">
+                                            <input name='permission' value='staff' type="radio" required />
+                                            <label for="demo-remember-me-2">Staff</label>
+                                        </div>
                                         
                                     </div>
                                     <div class="panel-footer text-right">
