--- a/users/templates/add_customer.html
+++ b/users/templates/add_customer.html
@@ -1,7 +1,16 @@
-{% extends 'base.html'%}enctype="multipart/form-data" action="{% url 'Addcustomers' %}" method="POST"
+{% extends 'base.html'%}
 {% load static %}
 {% block content%}
 
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+<!-- Latest compiled and minified JavaScript -->
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
  <div id="page-content">
                     
 					<div class="panel">
@@ -86,14 +95,15 @@
                                             <div class="col-sm-12">
                                                  <div class="form-group">
                                                     <label class="control-label">Users</label>
-                                                    <select class="form-control" name="user_id"required>
+                                                 
+                                                   <select style="width:100%" class="js-example-basic-single" name="user_id" required>
                                                        <option value="">Select user email</option> 
                                                     {% for user in users %}
 
                                                        <option value="{{user.id}}">{{user.email}}</option> 
                                                     {% endfor %}
                                                        
-                                                    </select>  
+                                                    </select>   
                                                 </div>
                                             </div>
                                         </div>
@@ -114,5 +124,10 @@
 					
 					
                 </div>
+<script>
+$(document).ready(function() {
+    $('.js-example-basic-single').select2();
+});
 
+</script>
 {% endblock content%}
