--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -16,7 +16,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <!--Bootstrap Stylesheet [ REQUIRED ]-->
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 
@@ -521,7 +522,11 @@
 
 
     
-    
+    <script>
+    $(document).ready(function() {
+    $('.js-example-basic-single').select2();
+});
+    </script>
 
 </body>
 </html>
