--- a/users/templates/users.html
+++ b/users/templates/users.html
@@ -38,6 +38,7 @@
                                             <th class="text-left">ID</th>
                                             <th>Email</th>
                                             <th>Phone Number</th>
+                                            <th>User type</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -47,6 +48,13 @@
                                             <td><a class="btn-link" href="#">{{user.id}}</a></td>
                                             <td>{{user.email}}</td>
                                             <td>{{user.phone}}</td>
+                                            <td>
+                                            {% if user.staff %}
+                                            Staff
+                                            {% else %}
+                                            Client
+                                            {% endif %}
+                                            </td>
                                             <td><a onclick="return confirm('Are you sure you want to reset password?')" href="{% url 'reset_password' user.id %}">
                                                 <button class="btn btn-primary">Reset password</button>
                                                 </a>
