--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -480,6 +480,16 @@
                                         </a>
                                     </li>
 
+                                    <li>
+                                        <a href="{% url 'changeuserpassword' user.id %}">
+                                            <i class="fa fa-lock"></i>
+                                            <span class="menu-title">
+                                                <strong>Change Password</strong>
+                                                
+                                            </span>
+                                        </a>
+                                    </li>
+
 </ul>
 
 
