--- a/users/templates/orders.html
+++ b/users/templates/orders.html
@@ -13,6 +13,13 @@
                         <!--===================================================-->
                         <div class="panel-body">
                             <div class="pad-btm form-inline">
+                                <div class="row">
+                                    
+                                    <div class="col-sm-12 table-toolbar-right">
+                                    <a href="{% url 'export_orders' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
+
+                                    </div>
+                                </div>
                                 
                             </div>
                             <div class="table-responsive">
