--- a/users/templates/pay_later_orders.html
+++ b/users/templates/pay_later_orders.html
@@ -6,7 +6,7 @@
                     
 					<div class="panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Orders</h3>
+                            <h3 class="panel-title">Orders that are going to be paid later</h3>
                         </div>
                     
                         <!--Data Table-->
@@ -16,8 +16,6 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                    <a href="{% url 'export_orders' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
-                                    <a href="{% url 'pay_later_orders' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Pay Later Orders</button></a>
 
                                     </div>
                                 </div>
