--- a/users/templates/orders.html
+++ b/users/templates/orders.html
@@ -17,7 +17,7 @@
                                     
                                     <div class="col-sm-12 table-toolbar-right">
                                     <a href="{% url 'export_orders' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
-                                    <a href="{% url 'pay_later_orders' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Pay Later Orders</button></a>
+                                    <a href="{% url 'pay_later_orders' %}"> <button class="btn btn-warning my-2 my-sm-0" type="submit">&nbsp; &nbsp;Pay Later Orders</button></a>
 
                                     </div>
                                 </div>
