--- a/users/templates/new_subscriptions.html
+++ b/users/templates/new_subscriptions.html
@@ -54,7 +54,7 @@
                                             <td>{{sub.CustomerID.user.phone}}</td>
                                             <td>{{sub.Category.Title}}</td>
                                             <td> 
-                                            <a class="btn-link" href="#"><button class="btn btn-primary">Approve</button></a>
+                                            <a class="btn-link" href={% url 'approve_sub' sub.id %}><button class="btn btn-primary">Approve</button></a>
                                             </td>
                                            
                                     </tr>
