--- a/users/templates/update_system.html
+++ b/users/templates/update_system.html
@@ -18,7 +18,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Title</label>
-                                                    <input type="text" class="form-control" name="Title" value={{updatesystem.title}}> 
+                                                    <input type="text" class="form-control" name="title" value={{updatesystem.title}}> 
                                                 </div>
                                             </div>
                                             
@@ -42,15 +42,8 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="control-label">Amount</label>
-                                                    <input type="number" class="form-control" name="amount" value={{updatesystem.Amount}}>
-                                                </div>
-                                            </div>
-                                           
-                                            <div class="col-sm-12">
-                                                <div class="form-group">
-                                                    <label class="control-label">Description</label>
-                                                    <textarea class="form-control" name="description" >{{updatesystem.Description}}</textarea> 
+                                                    <label class="control-label">Inches</label>
+                                                    <input type="number" class="form-control" name="inches" value={{updatesystem.inches}}>
                                                 </div>
                                             </div>
                                         </div>
